# cosmicOS

./: CMakeLists.txt  README.MD
kernel/arch/amd64/: boot.S  cpuid.S  linker.lds  main.S  paging.S
kernel/kernel/: kernel.c  kernel.cpp
kernel/kernel/asm/: asm.h
kernel/kernel/io/output/: Display.cpp  Display.h  IO.cpp  IO.h  display.c  display.cpp  display.h
kernel/kernel/setup/interrupts/: IDT.cpp  IDT.h  idt.cpp  idt.h
kernel/kernel/setup/pic/: PIC.cpp  PIC.h
kernel/kernel/util/std/: String.h
kernel/kernel/util/timer/: Timer.cpp  Timer.h
src/arch/amd64/: boot.S  cpuid.S  linker.lds  main.S
src/kernel/: kernel.cpp
src/kernel/asm/: asm.h
src/kernel/boot/interrupts/: IDT.cpp  IDT.h
src/kernel/boot/panic/: Panic.cpp
src/kernel/boot/pic/: PIC.cpp  PIC.h
src/kernel/io/output/: Display.cpp  Display.h  IO.cpp  IO.h
src/kernel/setup/interrupts/: IDT.cpp
src/kernel/setup/panic/: Panic.cpp  Panic.h
src/kernel/setup/pic/: PIC.cpp
src/kernel/util/std/: String.cpp  String.h
src/kernel/util/timer/: Timer.cpp  Timer.h
tools/boot/grub/: grub.cfg
tools/docker/: build.sh
tools/scripts/: convert.sh  mkiso.sh
